--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,9 @@
 @import 'tailwindcss';
+
+body {
+  @apply bg-black text-white;
+  /* font-family: 'Google Sans Flex', system-ui, sans-serif; */
+  font-family: 'Gill Sans', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
