--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,21 @@
 body {
   @apply bg-black text-white;
   /* font-family: 'Google Sans Flex', system-ui, sans-serif; */
+  overflow-x: hidden;
   font-family: 'Gill Sans', sans-serif;
   font-weight: 400;
   font-style: normal;
+}
+
+html {
+  overflow-x: hidden;
+}
+
+/* Hides the horizontal scrollbar while still allowing scroll */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
