feature: add animation to slider

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,10 @@ body {
   font-style: normal;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* Hides the horizontal scrollbar while still allowing scroll */
 .no-scrollbar::-webkit-scrollbar {
   display: none;
